# cosmic-keepass

./: CLAUDE.md  Cargo.toml  README.md  build.rs  justfile
i18n/de/: cosmic_keepass.ftl
i18n/en/: cosmic_keepass.ftl
resources/: app.desktop
src/: app.rs  config.rs  i18n.rs  kdbx.rs  main.rs  new_entry.rs  settings.rs
