[package]
name = "cosmic-keepass"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "KeePass password manager applet for the COSMIC desktop"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
i18n-embed-fl = "0.9.2"
rust-embed = "8.5.0"
keepass = { version = "0.10", features = ["save_kdbx4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "applet",
    "tokio",
    "wayland",
    "winit",
]

[profile.release]
opt-level = 3
panic = "abort"
lto = "thin"
